tdf#136955 DOCX import: fix shape paragraph margins

based on bad style inheritance, in the case of not
first paragraphs of shapes.

Regression from commit dc0300eac3b755bc207cd1fe87217f4ebaeb9f58
(tdf#118521 DOCX import: fix paragraph margin from paragraph style),
revealing the problematic m_sCurrentParaStyleName, see also
commit 8920d865ee148518bf71f71ce1866b24cc17c07e for more information.

Follow-up of commit c04ee66c7cfeb725d637b0f9ec3e3b1f8776bfe9
(tdf#134784 DOCX import: fix shape paragraph margins).

Change-Id: I4feab19fc58653d829d7a1ae8da3e3ce4fb3e2c3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104116
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>